--- a/src/assets/scss/_pages.scss
+++ b/src/assets/scss/_pages.scss
@@ -31,6 +31,8 @@
     &__girl {
         display: block;
         margin: 0 auto;
+        width: 100px;
+        max-width: 100%;
     }
     &__text {
         margin-top: 25px;
